CSS: Add break-word to prevent text overflow

--- a/public/css/irn.css
+++ b/public/css/irn.css
@@ -92,6 +92,8 @@ body {
   margin: 0;
   padding: 0;
   height: auto;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 html {
